--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "petarLecic.github.io/Connect4",
+  "homepage": "petarLecic.github.io/Connect4_front_end",
   "name": "connect4_front",
   "version": "0.1.0",
   "private": true,
